# ensae-3a-gadmm

./: README.md  pyproject.toml
notebooks/: ADMM_lag_data.ipynb  ADMM_synthetic_data.ipynb  GADMM.ipynb  GADMM_lag_data.ipynb  GADMM_synthetic_data.ipynb
src/ensae_3a_gadmm/: admm.py  gadmm.py  logistic_regression.py
